kubernetes-prctice2/ingress/ingress-pathbase.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-pathbase
  #annotations:
   # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ingress-demo.com
      http: 
        paths: 
          - path: /demo
            pathType: Prefix
            backend:
              service:
                name: django-service
                port:
                  number: 8000
          - path: /ngin
            pathType: Exact
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
